--- a/wallet/wallet-controller/Cargo.toml
+++ b/wallet/wallet-controller/Cargo.toml
@@ -16,9 +16,15 @@ utils = { path = "../../utils" }
 wallet = { path = ".." }
 wallet-storage = { path = "../storage" }
 
+async-trait.workspace = true
 bip39 = { version = "2.0", default-features = false, features = ["std", "zeroize"] }
 thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "sync"] }
 zeroize = "1.5"
 
 [dev-dependencies]
+chainstate-test-framework = { path = "../../chainstate/test-framework" }
+test-utils = { path = "../../test-utils" }
+
+anyhow = "1.0"
+rstest.workspace = true
