--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,8 @@ members = [
   "wallet",                       # Wallet primitives.
   "wallet/wallet-node-client",    # Wallet-to-node communication tools.
   "wallet/wallet-controller",     # Common code for wallet UI applications.
-  "wallet/wallet-cli",            # Wallet CLI/REPL.
+  "wallet/wallet-cli",            # Wallet CLI/REPL binary.
+  "wallet/wallet-cli-lib",        # Wallet CLI/REPL lib.
   "wasm-crypto",                  # WASM bindings for the crypto crate.
 ]
 
