--- a/wallet/wallet-cli-lib/Cargo.toml
+++ b/wallet/wallet-cli-lib/Cargo.toml
@@ -24,5 +24,11 @@ thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "sync"] }
 
 [dev-dependencies]
+chainstate = { path = "../../chainstate/" }
+chainstate-storage = { path = "../../chainstate/storage" }
+mempool = { path = "../../mempool" }
 node-lib = { path = "../../node-lib" }
+p2p = { path = "../../p2p" }
+rpc = { path = "../../rpc" }
+subsystem = { path = "../../subsystem" }
 test-utils = { path = "../../test-utils" }
