--- a/pos_accounting/Cargo.toml
+++ b/pos_accounting/Cargo.toml
@@ -17,6 +17,7 @@ typename = { path = "../utils/typename" }
 
 thiserror.workspace = true
 parity-scale-codec.workspace = true
+variant_count = "1.1"
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
