--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -14,6 +14,7 @@ serialization = { path = "../serialization" }
 utils = { path = "../utils" }
 utxo = { path = '../utxo' }
 
+parity-scale-codec.workspace = true
 thiserror.workspace = true
 itertools.workspace = true
 num = "0.4"
