--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -9,6 +9,7 @@ rust-version.workspace = true
 
 [dependencies]
 common = { path = "../common" }
+consensus = { path = "../consensus" }
 crypto = { path = "../crypto/" }
 logging = { path = "../logging" }
 pos_accounting = { path = "../pos_accounting" }
