--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -8,6 +8,7 @@ rust-version.workspace = true
 [dependencies]
 logging = {path = '../logging'}
 crypto = { path = "../crypto/" }
+serialization = { path = "../serialization" }
 
 atomic-traits = "0.3"
 directories = "5.0"
@@ -15,8 +16,10 @@ num-traits = "0.2"
 probabilistic-collections = "0.7"
 qrcodegen = "1.8"
 slave-pool = "0.2"
+zeroize = "1.5"
 
 thiserror.workspace = true
+parity-scale-codec.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
