--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -27,11 +27,11 @@ chacha20poly1305 = "0.10"
 schnorrkel = "0.10"
 merlin = { version = "3.0", default-features = false }
 argon2 = { version = "0.5", features = ["std"] }
-zeroize = "1.5"
 
 generic-array.workspace = true
 parity-scale-codec.workspace = true
 thiserror.workspace = true
+zeroize.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
