--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -9,6 +9,7 @@ rust-version.workspace = true
 chainstate-types = { path = '../chainstate/types' }
 common = { path = '../common' }
 crypto = { path = '../crypto' }
+logging = { path = "../logging" }
 pos_accounting = { path = '../pos_accounting' }
 serialization = { path = "../serialization" }
 utils = { path = "../utils" }
