--- a/wallet/wallet-cli-lib/Cargo.toml
+++ b/wallet/wallet-cli-lib/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 common = { path = "../../common" }
 consensus = { path = "../../consensus" }
+crypto = { path = "../../crypto" }
 logging = { path = "../../logging" }
 node-comm = { path = "../wallet-node-client" }
 serialization = { path = "../../serialization" }
